styles/globals.scss
@import 'mixins';
@import 'variables';
@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,700&display=swap');

*,
*::after,
*::before {
  margin: 0;
  padding: 0;
  box-sizing: inherit;
}

html {
  /* root font size is 16px so 62.5% is 10px */
  font-size: 62.5%;
  font-family: 'Ubuntu', sans-serif;
  font-weight: 400;
  background-color: $primary;

  // @include respond(tab-land) {
  //   font-size: 58%;
  // }
  @include respond(phone) {
    font-size: 48%;
  }
}

body {
  box-sizing: border-box;
  padding: 4rem;

  @include respond(phone) {
    padding: 2rem;
  }
}

//rich text editor

.quill {
  background-color: #fff;
  border-radius: 10px;
  border: 1px solid #6a6a6a;

  .ql-toolbar {
    border-radius: 10px 10px 0 0;
    border-style: none !important;
    border-bottom: 1px solid #6a6a6a !important;
  }

  .ql-container {
    border-radius: 0 0 10px 10px;
    border-style: none !important;
    height: 10rem;
  }
}

//THIS MUST BE COMMENTED FOR PRODUCTiON, BUT UNCOMMENTED FOR DEV
// .paypal-buttons {
//   &:last-of-type {
//     display: none !important;
//   }
// }

